--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import url('../fonts/fonts.css');
+@import url('../vendor/fonts.css');
 @import url('../vendor/normalize.css');
 @import url('../blocks/elements/elements.css');
 @import url('../blocks/footer/footer.css');
