--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -1,17 +1,16 @@
 .profile__edit-btn {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.0);
     height: 24px;
     width: 24px;
     border: 1px solid white;
-    background-image: url('../../../images/pencil.png');
+    background-image: url('../../../images/pencil.svg');
     background-position: center;
     background-repeat: no-repeat;
     margin-right: 165px;
 }
 
 .profile__edit-btn:hover {
-    border-color: #303030;
-    background-image: url('../../../images/pencil_grey.png');
+    opacity: 0.7;
     cursor: pointer;
 }
 
