--- a/blocks/elements/__card-title/elements__card-title.css
+++ b/blocks/elements/__card-title/elements__card-title.css
@@ -1,6 +1,6 @@
 .elements__card-title {
     margin: 0px 0px 0px 21px;
-    font-family: Inter;
+    font-family: "Inter", Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
