--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,8 @@
-@import url('./__line/header__line.css');
 @import url('./__logo/header__logo.css');
 
 .header {
-    padding-top: 45px;
+    padding: 45px 0px 41px;
+    border-bottom: 2px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 880px) {
