--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -2,7 +2,7 @@
     min-height: 40px;
     width: 40px;
     background: rgba(0, 0, 0, 0);
-    background-image: url('../../../images/close.png');
+    background-image: url('../../../images/close.svg');
     background-position: center;
     background-repeat: no-repeat;
     border: none;
@@ -13,7 +13,7 @@
 }
 
 .popup__close:hover {
-    background-image: url('../../../images/grey_close.png');
+    opacity: 0.7;
     cursor: pointer;
 }
 
