--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -1,4 +1,5 @@
 .popup__save {
+    border: none;
     display: block;
     width: 358px;
     height: 50px;
@@ -9,10 +10,11 @@
     font-size: 18px;
     line-height: 22px;
     text-align: center;
+    margin-bottom: 36.51px;
 }
 
 .popup__save:hover {
-    background: #303030;
+    opacity: 0.7;
     cursor: pointer;
 }
 
@@ -23,6 +25,7 @@
         margin-top: 15px;
         font-size: 14px;
         line-height: 17px;
+        margin-bottom: 25px;
     }
 }
 
