--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,10 @@
+@import url('./__open/popup__open.css');
 @import url('./__close/popup__close.css');
 @import url('./__container/popup__container.css');
 @import url('./__input/popup__input.css');
 @import url('./__save/popup__save.css');
 @import url('./__title/popup__title.css');
-@import url('./__open/popup__open.css');
+
 
 .popup {
     display: none;
@@ -14,15 +15,12 @@
     left: 0;
     align-items: center;
     justify-content: center;
-    font-family: Inter;
+    font-family: "Inter", Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
     flex-direction: column;
+    background-color: rgba(0,0,0,0.5);
     
-}
-
-.popup__open {
-    display: flex;
 }
 
 
