--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -3,15 +3,14 @@
     border-radius: 2px;
     height: 50px;
     width: 150px;
-    background-color: #000000;
-    background-image: url(../../../images/plus.png);
+    background-color: rgba(0,0,0,0.0);
+    background-image: url(../../../images/plus.svg);
     background-repeat: no-repeat;
     background-position: center; 
 }
 
 .profile__add-btn:hover {
-    border-color: #303030;
-    background-image: url('../../../images/Vector.png');
+    opacity: 0.7;
     cursor: pointer;
 }
 
