--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,6 +3,10 @@
     font-size: 42px;
     line-height: 48px;
     margin: 0px 18px 16px 0px;
+    text-overflow: ellipsis; 
+    white-space: nowrap; 
+    overflow: hidden; 
+    max-width: 373px;
 }
 
 @media screen and (max-width: 880px) {
