--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,4 @@
-@import url('./__open/popup__open.css');
+@import url('./_open/popup_open.css');
 @import url('./__close/popup__close.css');
 @import url('./__container/popup__container.css');
 @import url('./__input/popup__input.css');
